[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/menu/CreateOrJoinRoomMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dreamwood-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/wonderbar.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 67
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 47
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 3 )

[node name="CreateOrJoinRoomMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 482.0
margin_top = 262.0
margin_right = 1349.0
margin_bottom = 710.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinRoom" type="Button" parent="Panel"]
margin_left = 475.0
margin_top = 206.0
margin_right = 779.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 1 )
text = "Join Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoom" type="Button" parent="Panel"]
margin_left = 474.0
margin_top = 99.0
margin_right = 772.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Create Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCodeInput" type="LineEdit" parent="Panel"]
margin_left = 33.0
margin_top = 204.0
margin_right = 459.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "Enter Room Code To Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomMenuLabel" type="Label" parent="Panel"]
margin_left = 300.0
margin_top = 24.0
margin_right = 513.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "Room Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="Panel"]
margin_left = 37.0
margin_top = 98.0
margin_right = 455.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 5 )
placeholder_text = "Enter Username Here"

[connection signal="pressed" from="Panel/JoinRoom" to="." method="_on_JoinRoom_pressed"]
[connection signal="pressed" from="Panel/CreateRoom" to="." method="_on_CreateRoom_pressed"]
